--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ ion-icon
 }
 #meme-image-container.earth
 {
-    border: dotted 6px rgb(0,128,0);
+    border: groove 6px rgb(0,128,0);
     background-color: white;
     box-shadow: gray 2px 10px 20px 5px;
 }
@@ -160,6 +160,16 @@ ion-icon
     color: white;
     z-index: 2;
 }
-img{
+#memes-prontas
+{
+    display: block;
+}
+.memes-img
+{
     width: 70px;
+}
+#bl01, #bl02
+{
+    display: inline-block;
+    margin-left: 30px;
 }
